Se agregaron funcionalidades del cliente, además, se cambiaron algunas entidades en cuanto a sus atributos

--- a/web/src/main/webapp/resources/css/styles.css
+++ b/web/src/main/webapp/resources/css/styles.css
@@ -66,3 +66,42 @@
         margin-top: 7rem;
     }
 }
+.imagen-confiteria{
+    height: 100px;
+    width: 100px;
+}
+.product{
+    align-self: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    margin-right: 3%;
+}
+.elegir-numero-entradas{
+    align-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.iniciar-sesion{
+    text-align: center;
+    align-items: center;
+    align-content: center;
+}
+.btn-registro{
+    text-decoration-line: none;
+}
+.sin-linea a{
+    text-decoration: none;
+}
+
+.item-fila-1{
+    margin-top: 40px;
+}
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    justify-content: center;
+    text-align: end;
+}
